--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ before_script:
   - TWRP_SOURCE="https://github.com/PhantomZone54/twrp_sources_norepo/releases/download/v3.4.0-20200708/MinimalOmniRecovery-twrp-9.0-norepo-20200708.tar.xz.ab"
   # Uncomment & Use below line If Building for Nougat-based Devices
   # - TWRP_SOURCE="https://github.com/PhantomZone54/twrp_sources_norepo/releases/download/v3.3.1-20200222/MinimalOmniRecovery-twrp-7.1-norepo-20200222.tar.xz"
-  - wget -q ${TWRP_SOURCE} -O $HOME/twrp.tar.xz
-  - tar -xJf twrp.tar.xz --directory $HOME/twrp/ && rm twrp.tar.xz
+  - wget -q ${TWRP_SOURCE} -O $HOME/twrp.tar.xz.ab
+  - tar -xJf twrp.tar.xz.ab --directory $HOME/twrp/ && rm twrp.tar.xz
 script:
   # Replace your $$USERNAME$$, $$REPO_URL$$, $$BRAND$$, $$DEVICE$$
   - cd $HOME/twrp/ && git clone https://github.com/mahm000d/https://github.com/mahm000d/twrb-realme-rmx2001.git device/realme/rmx2001
