--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
   # Uncomment & Use below line If Building for Nougat-based Devices
   # - TWRP_SOURCE="https://github.com/PhantomZone54/twrp_sources_norepo/releases/download/v3.3.1-20200222/MinimalOmniRecovery-twrp-7.1-norepo-20200222.tar.xz"
   - wget -q ${TWRP_SOURCE} -O $HOME/twrp.tar.xz.ab
-  - tar -xJf twrp.tar.xz.ab --directory $HOME/twrp/ && rm twrp.tar.xz
+  - tar -xJf twrp.tar.xz.ab --directory $HOME/twrp/ && rm twrp.tar.xz.ab
 script:
   # Replace your $$USERNAME$$, $$REPO_URL$$, $$BRAND$$, $$DEVICE$$
   - cd $HOME/twrp/ && git clone https://github.com/mahm000d/https://github.com/mahm000d/twrb-realme-rmx2001.git device/realme/rmx2001
